quorum/test/tests/templating/Pass/PassIntegerTakesNumber_11.quorum
class main
    action main
        Test<number> something
        something:doSomething(20)
    end
end