quorum/test/tests/templating/Fail/PassTextTakesNumber_8.quorum
class main
    action main
        Test<number> something
        something:doSomething("text")
    end
end